--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,14 @@
-body {
+/*body {
  background: #D0E4F5;
+}*/
+
+/*body {
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
 }
+
+canvas {
+  width: 100%;
+  height: 100%;
+}*/
